--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .App {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 40px auto;
   text-align: center;
 }
 
